fix: styles on mobile devices

--- a/src/components/Burger/styles.module.scss
+++ b/src/components/Burger/styles.module.scss
@@ -2,6 +2,15 @@
 
 .burger {
   display: none;
+  transition: all 0.5s ease;
+
+  &:hover rect {
+    fill: #FF4C0D;
+  }
+
+  &:hover g rect {
+    fill: #ffffff;
+  }
 
   @include _769 {
     display: block;
