--- a/src/containers/App/Battery/styles.module.scss
+++ b/src/containers/App/Battery/styles.module.scss
@@ -12,7 +12,7 @@
     margin-bottom: 0;
   }
 
-  @include _620 {
+  @include _375 {
     margin-bottom: 0 !important;
   }
 
