--- a/src/containers/App/Brand/styles.module.scss
+++ b/src/containers/App/Brand/styles.module.scss
@@ -16,6 +16,7 @@
 
   @include _620 {
     max-height: 350px;
+    margin-bottom: 130px;
   }
 
   .content {
