--- a/src/containers/App/Preview/styles.module.scss
+++ b/src/containers/App/Preview/styles.module.scss
@@ -128,7 +128,7 @@
   @include _620 {
     height: 324px;
     top: 203px;
-    left: 0;
+    left: calc(100% - 426px);
   }
 
   @include _375 {
